tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---










• Working (0s • esc to interrupt)

• Messages to be submitted at end of turn
  ↳ Steer submitted while /review was running.
────────────────────────────────────────────────────────────────────────────────
› Ask Agere to do anything
────────────────────────────────────────────────────────────────────────────────
  gpt-5.5 none · Context 100% left · /tmp/project
