tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Agere to do anything                                                      "
"                                                                                "
"  Fast on                                                                       "
